# StrataAI

./: .gitignore  AGENTS.md  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1fc2fadb4027_init_database.py  3f628a3530d4_first_version.py  bc0cf0433d12_init_database.py
backend/src/strata_ai/: __init__.py
backend/src/strata_ai/api/v1/: __init__.py  auth.py  organizations.py  users.py
backend/src/strata_ai/auth/: backend.py  jwt.py
backend/src/strata_ai/core/: config.py
backend/src/strata_ai/db/: engine.py
backend/src/strata_ai/db_models/: __init__.py  organizations.py
backend/src/strata_ai/middlewares/: exception_handler.py  response_wrapper.py
backend/src/strata_ai/models/: __init__.py  organizations.py  user.py
backend/src/strata_ai/repos/: org_repo.py  user_repo.py
backend/src/strata_ai/schemas/: __init__.py  organization.py  resp.py  user.py
backend/src/strata_ai/services/: __init__.py  organization_service.py  user_service.py
backend/src/strata_ai/utils/: user_utils.py
backend/strata/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
backend/strata/app/: build.gradle.kts
backend/strata/app/src/main/java/com/otakusaikou/strata/: StrataApplication.java
backend/strata/app/src/main/resources/: application-dev.properties  application.properties  schema.sql
backend/strata/app/src/test/java/com/otakusaikou/strata/: StrataApplicationTests.java
backend/strata/authentication/: build.gradle.kts
backend/strata/src/main/resources/: application.properties
dev/: Makefile  (+1 more)
(+101 files in other folders)
