[project]
name = "strata-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Fledge Shiu", email = "xzk0701@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
strata-ai = "strata_ai:main"

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"
